# server/internal/legacy/views/sponsor.go
@@ -4,16 +4,13 @@ import (
 	"fmt"
 	"log/slog"
 	"net/http"
-	"net/url"
 	"strconv"
 	"time"
 
 	"github.com/labstack/echo/v4"
-	"gopkg.in/guregu/null.v4"
 
 	"github.com/COMTOP1/AFC-GO/server/internal/legacy/templates"
 	"github.com/COMTOP1/AFC-GO/server/internal/sponsor"
-	"github.com/COMTOP1/AFC-GO/server/internal/team"
 	"github.com/COMTOP1/AFC-GO/server/internal/user"
 )
 
@@ -60,119 +57,49 @@ func (v *Views) SponsorAddFunc(c echo.Context) error {
 	spanCtx, span := tracer.Start(c.Request().Context(), "views.SponsorAddFunc")
 	defer span.End()
 	c.SetRequest(c.Request().WithContext(spanCtx))
-	if c.Request().Method == http.MethodPost {
-		c1 := v.getSessionData(c)
-
-		name := c.FormValue("name")
-		purpose := c.FormValue("purpose")
-
-		data := struct {
-			Error string `json:"error"`
-		}{
-			Error: "",
-		}
-
-		website := c.FormValue("website")
-		if len(website) > 0 {
-			_, err := url.ParseRequestURI(website)
-			if err != nil {
-				slog.Info(fmt.Sprintf("failed to parse website for sponsor add, error: %+v", err))
-				data.Error = fmt.Sprintf("failed to parse website for sponsor add: %+v", err)
-				return c.JSON(http.StatusOK, data)
-			}
-		}
-
-		var teamActual string
-
-		teamValue := c.FormValue("team")
-		if teamValue == "A" || teamValue == "O" || teamValue == "Y" {
-			teamActual = teamValue
-		} else if len(teamValue) > 0 {
-			teamID, err := strconv.Atoi(teamValue)
-			if err != nil {
-				slog.Info(fmt.Sprintf("failed to parse team for sponsor add, error: %+v", err))
-				data.Error = fmt.Sprintf("failed to parse team for sponsor add: %+v", err)
-				return c.JSON(http.StatusOK, data)
-			}
-
-			_, err = v.team.GetTeam(c.Request().Context(), team.Team{ID: teamID})
-			if err != nil {
-				slog.Info(fmt.Sprintf("failed to get team for sponsor add, error: %+v", err))
-				data.Error = fmt.Sprintf("failed to get team for sponsor add: %+v", err)
-				return c.JSON(http.StatusOK, data)
-			}
-			teamActual = teamValue
-		}
-
-		file, err := c.FormFile("upload")
-		if err != nil {
-			slog.Info(fmt.Sprintf("failed to get file for sponsor add, error: %+v", err))
-			data.Error = fmt.Sprintf("failed to get file for sponsor add: %+v", err)
-			return c.JSON(http.StatusOK, data)
-		}
-		fileName, err := v.fileUpload(c.Request().Context(), file, "sponsor")
-		if err != nil {
-			slog.Info(fmt.Sprintf("failed to upload file for sponsor add, error: %+v", err))
-			data.Error = fmt.Sprintf("failed to upload file for sponsor add: %+v", err)
-			return c.JSON(http.StatusOK, data)
-		}
-
-		_, err = v.sponsor.AddSponsor(c.Request().Context(), sponsor.Sponsor{Name: name, Website: null.NewString(website, len(website) > 0), FileName: null.NewString(fileName, len(fileName) > 0), TeamID: teamActual, Purpose: null.NewString(purpose, len(purpose) > 0)})
-		if err != nil {
-			slog.Info(fmt.Sprintf("failed to add sponsor for sponsor add, error: %+v", err))
-			data.Error = fmt.Sprintf("failed to add sponsor for sponsor add: %+v", err)
-			return c.JSON(http.StatusOK, data)
-		}
-
-		c1.Message = fmt.Sprintf("successfully added \"%s\"", name)
-		c1.MsgType = "is-success"
-		err = v.setMessagesInSession(c, c1)
-		if err != nil {
-			slog.Info(fmt.Sprintf("failed to set data for sponsor add, error: %+v", err))
-		}
-
+	if c.Request().Method != http.MethodPost {
+		return v.invalidMethodUsed(c)
+	}
+	c1 := v.getSessionData(c)
+	data := struct {
+		Error string `json:"error"`
+	}{}
+	image, err := legacyUpload(c, "upload")
+	if err != nil {
+		data.Error = fmt.Sprintf("failed to get file for sponsor add: %+v", err)
 		return c.JSON(http.StatusOK, data)
 	}
-	return v.invalidMethodUsed(c)
+	created, err := v.sponsorSvc.Create(c.Request().Context(), sponsor.CreateInput{
+		Name:    c.FormValue("name"),
+		Website: c.FormValue("website"),
+		Purpose: c.FormValue("purpose"),
+		Team:    c.FormValue("team"),
+	}, image)
+	if err != nil {
+		slog.Info(fmt.Sprintf("failed to add sponsor for sponsor add, error: %+v", err))
+		data.Error = fmt.Sprintf("failed to add sponsor for sponsor add: %+v", err)
+		return c.JSON(http.StatusOK, data)
+	}
+	v.flash(c, c1, fmt.Sprintf("successfully added \"%s\"", created.Name))
+	return c.JSON(http.StatusOK, data)
 }
 
 func (v *Views) SponsorDeleteFunc(c echo.Context) error {
 	spanCtx, span := tracer.Start(c.Request().Context(), "views.SponsorDeleteFunc")
 	defer span.End()
 	c.SetRequest(c.Request().WithContext(spanCtx))
-	if c.Request().Method == http.MethodPost {
-		c1 := v.getSessionData(c)
-
-		id, err := strconv.Atoi(c.Param("id"))
-		if err != nil {
-			return fmt.Errorf("failed to get id for sponsor delete, error: %w", err)
-		}
-
-		sponsorDB, err := v.sponsor.GetSponsor(c.Request().Context(), sponsor.Sponsor{ID: id})
-		if err != nil {
-			return fmt.Errorf("failed to get sponsor for sponsor delete, sponsor id: %d, error: %w", id, err)
-		}
-
-		if sponsorDB.FileName.Valid {
-			err = v.storage.Delete(c.Request().Context(), sponsorDB.FileName.String)
-			if err != nil {
-				slog.Info(fmt.Sprintf("failed to delete sponsor image for sponsor delete, sponsor id: %d, error: %+v", id, err))
-			}
-		}
-
-		err = v.sponsor.DeleteSponsor(c.Request().Context(), sponsorDB)
-		if err != nil {
-			return fmt.Errorf("failed to delete sponsor for sponsor delete, sponsor id: %d, error: %w", id, err)
-		}
-
-		c1.Message = fmt.Sprintf("successfully deleted \"%s\"", sponsorDB.Name)
-		c1.MsgType = "is-success"
-		err = v.setMessagesInSession(c, c1)
-		if err != nil {
-			slog.Info(fmt.Sprintf("failed to set data for sponsor delete, sponsor id: %d, error: %+v", id, err))
-		}
-
-		return c.Redirect(http.StatusFound, "/sponsors")
+	if c.Request().Method != http.MethodPost {
+		return v.invalidMethodUsed(c)
 	}
-	return v.invalidMethodUsed(c)
+	c1 := v.getSessionData(c)
+	id, err := strconv.Atoi(c.Param("id"))
+	if err != nil {
+		return fmt.Errorf("failed to get id for sponsor delete, error: %w", err)
+	}
+	deleted, err := v.sponsorSvc.Delete(c.Request().Context(), id)
+	if err != nil {
+		return fmt.Errorf("failed to delete sponsor for sponsor delete, sponsor id: %d, error: %w", id, err)
+	}
+	v.flash(c, c1, fmt.Sprintf("successfully deleted \"%s\"", deleted.Name))
+	return c.Redirect(http.StatusFound, "/sponsors")
 }
